# dark-remote

./: Cargo.toml  README.md  check.sh  dark-remote-ui.js  dark-remote-ui_bg.wasm  index.html  manifest.json  rust-toolchain.toml
.github/workflows/: pages.yml  rust.yml
dark-remote-common/: Cargo.toml
dark-remote-common/src/: config.rs
dark-remote-server/: Cargo.toml
dark-remote-server/src/: main.rs
dark-remote-server/src/connection/: mod.rs
dark-remote-ui/: Cargo.toml  index.html
dark-remote-ui/assets/: sw.js
dark-remote-ui/src/: app.rs  connection.rs  lib.rs  main.rs
dark-remote-ui/src/utils/: layout.rs  mod.rs
