[package]
name = "dark-remote-server"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
dark-remote-common.workspace = true

axum               = { version = "0.8.7", features = ["ws"] }
axum-extra         = { version = "0.12.2", features = ["typed-header"] }
cec_linux          = "0.2.0"
enigo              = { version = "0.6.1", features = ["wayland"] }
futures-util       = "0.3.31"
serde_json         = "1.0.145"
thiserror          = "2.0.17"
tokio              = { version = "1.47.2", features = ["macros", "rt-multi-thread", "net"] }
tower-http         = { version = "0.6.7", features = ["trace", "fs"] }
tracing            = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[lints]
workspace = true
