[package]
name = "dark-remote-ui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
dark-remote-common.workspace = true

ewebsock   = { version = "0.8.0", features = ["tls"] }
log        = "0.4.27"
serde_json = "1.0.145"

egui = "0.33.2"

serde = { version = "1.0.219", features = ["derive"] }

# desktop:
[target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
env_logger = "0.11.8"

eframe = { version = "0.33.2", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use glow for rendering on desktop.
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys              = "0.3.70"

eframe = { version = "0.33.2", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "persistence",   # Enable restoring app state when restarting the app.
    "glow",          # Use glow for rendering on the web.
] }

# android:
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
wgpu           = { version = "27.0.1", default-features = false, features = ["gles"] }
egui-winit     = { version = "0.33.2", default-features = false, features = ["clipboard", "links"] }

eframe = { version = "0.33.2", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use wgpu for rendering on Android.
    "persistence",   # Enable restoring app state when restarting the app.
    "android-native-activity",
] }
